--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+#credentials, will have to figure out how to mask these in production
+/credentials.js
 
 # dependencies
 /node_modules
